            ----------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

23 May 2014  M. Kelsey (hadr-casc-V09-06-55)
--------------------------------------------
- G4InuclNuclei.cc:  Avoid FPE in setExcitationEnergy() for zero Ekin.

10 March 2014  M. Kelsey
------------------------
- G4IntraNucleiCascader.cc:  Fix bug #1584, memory leak in secondaries.

29 January 2014  G.Folger  not tagged
-------------------------------------
- Removed cascade/utils from cascade/sources.cmake

6 January 2014  M.Kelsey (hadr-casc-V09-06-53)
----------------------------------------------
- G4CascadeParameters.cc:  Improve singleton initialization by moving static
  instance to pointer in file scope (anon namespace), check for null pointer
  in Instance() call.  Drop use of messenger (temporarily) since it's not
  thread safe.  This change is backported to 10.0.

2 October 2013  V.Ivanchenko (hadr-casc-V09-06-52)
----------------------------------------------------
- G4NonEquilibriumEvaporator.hh - added forward declaration of G4Pow,
    because after the revision of G4Pow cascade is not compiling anymore

1 October 2013  Michael Kelsey (hadr-casc-V09-06-51)
----------------------------------------------------
- G4NucleiModel:  Make gammaQDinterp a regular data member, to avoid data
  race condition with shared (const but mutable) object.

- G4EquilibriumEvaporator:  Make QFinterp a regular data member, to avoid data
  race condition with shared (const but mutable) object.

25 September 2013  Michael Kelsey (hadr-casc-V09-06-50)
-------------------------------------------------------
- G4NucleiModel:  Remove G4Pow introduced below; replace usage with simple
  "*= 2" inside loop.
